勤提交！完成三章，继续推进

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /public/
+.DS_Store
+content/.DS_Store
+resources/.DS_Store
+resources/_gen/.DS_Store
+resources/_gen/assets/.DS_Store
+resources/_gen/assets/scss/.DS_Store
